--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "transform": {
       ".(ts|tsx)": "ts-jest"
     },
-    "testEnvironment": "node",
+    "testEnvironment": "jsdom",
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
     "moduleFileExtensions": [
       "ts",
@@ -70,7 +70,11 @@
       }
     },
     "collectCoverageFrom": [
-      "src/*.{js,ts}"
+      "src/*.{js,ts}",
+      "src/**/*.{js,ts}"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/test/boot.ts"
     ]
   },
   "prettier": {
@@ -85,22 +89,32 @@
   "devDependencies": {
     "@commitlint/cli": "^7.1.2",
     "@commitlint/config-conventional": "^7.1.2",
-    "@types/jest": "^23.3.2",
+    "@types/jasmine-ajax": "^3.3.2",
+    "@types/jest": "^26.0.15",
     "@types/node": "^10.11.0",
+    "@types/nprogress": "^0.2.0",
+    "@types/qs": "^6.9.5",
+    "atob": "^2.1.2",
     "body-parser": "^1.19.0",
     "colors": "^1.3.2",
     "commitizen": "^3.0.0",
+    "connect-multiparty": "^2.2.0",
+    "cookie-parser": "^1.4.5",
     "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
+    "css-loader": "^5.0.1",
     "cz-conventional-changelog": "^2.1.0",
     "express": "^4.17.1",
     "husky": "^1.0.1",
-    "jest": "^23.6.0",
-    "jest-config": "^23.6.0",
+    "jasmine-ajax": "^4.0.0",
+    "jasmine-core": "^3.6.0",
+    "jest": "^26.6.3",
+    "jest-config": "^26.6.3",
     "lint-staged": "^8.0.0",
     "lodash.camelcase": "^4.3.0",
     "prettier": "^1.14.3",
     "prompt": "^1.0.0",
+    "qs": "^6.9.4",
     "replace-in-file": "^3.4.2",
     "rimraf": "^2.6.2",
     "rollup": "^0.67.0",
@@ -111,8 +125,9 @@
     "rollup-plugin-typescript2": "^0.18.0",
     "semantic-release": "^15.9.16",
     "shelljs": "^0.8.3",
+    "style-loader": "^2.0.0",
     "travis-deploy-once": "^5.0.9",
-    "ts-jest": "^23.10.2",
+    "ts-jest": "^26.4.3",
     "ts-loader": "^8.0.7",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
@@ -124,5 +139,8 @@
     "webpack": "^5.3.2",
     "webpack-dev-middleware": "^4.0.0",
     "webpack-hot-middleware": "^2.25.0"
+  },
+  "dependencies": {
+    "nprogress": "^0.2.0"
   }
 }
